--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BSOpenAlex</title>
+  <title>BSO by OpenAlex</title>
 </head>
 
 <body>
